fer-de-lance/tests/negative/invalid_set.snek
(let* ((x 5))
		(set! y 4)
		)
